fix: dead features operation now returns empty list if no df
